# my_asv_package

my_asv_package/: CMakeLists.txt  package.xml
my_asv_package/Description/: rplidar.launch
my_asv_package/config/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  joint_names_ASV_CATAM_URDF_ASSEMBLY.yaml  local_costmap_params.yaml
my_asv_package/launch/: collect_goals_sim.launch  display.launch  gazebo.launch  gmapping.launch  joy.launch  localization_run_sim.launch  outdoor_nav.launch  path_planning.launch  send_goals_sim.launch  spawn.launch  water_world.sdf
my_asv_package/meshes/: Link2.STL
my_asv_package/scripts/: obstacleavoidance.py  pos.py  reading_laser.py  test.py
my_asv_package/src/: collect_gps_waypoints.cpp  gps_waypoint.cpp  joy.py  send_gps.py
my_asv_package/urdf/: ASV_CATAM_URDF_ASSEMBLY.csv  ASV_CATAM_URDF_ASSEMBLY.urdf
